<resources>
    <string name="app_name">Contactos</string>
    <string name="titulo_nuevo">Nuevo Contacto</string>
    <string name="titulo_switch">Cambiar Vista</string>
    <string name="titulo_search">Buscar Contacto</string>

    <string name="titulo_edad">Edad</string>
    <string name="titulo_peso">Peso</string>
    <string name="titulo_telefono">Teléfono</string>
    <string name="titulo_email">Email</string>
    <string name="titulo_direccion">Dirección</string>
    <string name="titulo_eliminar_contacto">Eliminar Contacto</string>
    <string name="titulo_editar_contacto">Editar Contacto</string>
</resources>
