<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/searchView"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/titulo_search"
            app:actionViewClass="android.support.v7.widget.SearchView"
            app:showAsAction="always" >
    </item>

    <item
            android:id="@+id/switchView"
            app:showAsAction="always"
            app:actionLayout="@layout/switch_item"
            android:title="@string/titulo_switch"/>
    <item
            android:id="@+id/Nuevo"
            app:showAsAction="always"
            android:icon="@drawable/icono_nuevo"
            android:title="@string/titulo_nuevo"/>

</menu>