<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Nuevo">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_height="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:elevation="4dp"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/Theme.AppCompat.Light"
    />

    <ImageView
            android:layout_width="250dp"
            android:layout_height="256dp" app:srcCompat="@drawable/foto_01"
            android:id="@+id/IvFoto" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"/>
    <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvNombre"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/IvFoto"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toStartOf="@+id/tvApellidos"
            android:layout_marginRight="16dp"
            android:hint="Nombre" android:inputType="text|textPersonName" android:singleLine="true"/>
    <EditText
            android:hint="Empresa"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvEmpresa" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvNombre" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" android:inputType="text" android:singleLine="true"/>
    <TextView
            android:text="@string/titulo_edad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toStartOf="@+id/textView4"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            app:layout_constraintHorizontal_bias="0.53" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvEmpresa"/>
    <TextView
            android:text="@string/titulo_peso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvEmpresa" app:layout_constraintStart_toEndOf="@+id/tvEdad"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/tvTelefono" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>
    <TextView
            android:text="@string/titulo_telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" app:layout_constraintStart_toEndOf="@+id/textView4"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tvEmpresa"/>
    <EditText
            android:hint="30 Años"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvEdad"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginTop="16dp"
            android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toStartOf="@+id/tvPeso" android:layout_marginRight="16dp"
            android:inputType="number" android:singleLine="true"/>
    <EditText
            android:hint="56 Kg"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvPeso"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintStart_toEndOf="@+id/textView9"
            android:layout_marginStart="8dp" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/textView11" android:layout_marginRight="8dp"
            android:inputType="numberDecimal" android:singleLine="true"/>
    <EditText
            android:hint="769567932"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvTelefono"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="16dp"
            app:layout_constraintStart_toEndOf="@+id/tvPeso" android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp" app:layout_constraintHorizontal_bias="0.51" android:inputType="phone"
            android:singleLine="true"/>
    <TextView
            android:text="@string/titulo_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintEnd_toStartOf="@+id/textView11" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvEdad" app:layout_constraintHorizontal_bias="0.303"/>
    <EditText
            android:hint="Email@email.com"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvEmail"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView9" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toStartOf="@+id/tvDireccion" android:layout_marginRight="16dp"
            app:layout_constraintHorizontal_bias="0.18" android:inputType="textEmailAddress" android:singleLine="true"/>
    <TextView
            android:text="@string/titulo_direccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView11"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="56dp" android:layout_marginRight="56dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tvTelefono"/>
    <EditText
            android:hint="C/Peña Prieta 44"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvDireccion"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView11" android:layout_marginEnd="28dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="28dp"
            android:inputType="textPostalAddress" android:singleLine="true"/>
    <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="text|textPersonName"
            android:hint="Apellidos"
            android:id="@+id/tvApellidos"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="16dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/IvFoto" android:singleLine="true"/>

</android.support.constraint.ConstraintLayout>